--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,11 @@
       "js": ["adskipper.js"],
       "run_at": "document_start",
       "world": "MAIN"
+    },
+    {
+    "matches": [ "*://*/*" ],
+    "js": ["volumeInject.js"],
+    "run_at": "document_end"
     }
   ],
   "permissions": [
