--- a/manifest.json
+++ b/manifest.json
@@ -14,11 +14,13 @@
     },
       "content_scripts": [
     {
+      "matches": ["*://www.youtube.com/*"],
       "js": ["adskipper.js"],
       "run_at": "document_start",
       "world": "MAIN"
     },
     {
+    "matches": ["*://*/*"],
     "js": ["volumeInject.js"],
     "run_at": "document_end"
     }
